# habmot

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
.github/workflows/: run_tests.yml
docs/: contributing.md
habmot/: __init__.py  config.py  model.py  trial.py
runner/: analyze_data.py  use_adder.py
runner/data/: conf.json
runner/models/: pyomecaman.bioMod
tests/: conf.json  test_file.py
